Added additional VM optimization flags to startup.