@@ -67,7 +67,10 @@ public class RunMe{
 			{
 			System.out.println("Overriding the settings passed to this JVM. If you wish to manually set the JVM settings, include the `-Dorg.jtrfp.trcl.bypassConfigure=true` flag in the java command.");
 			String executable=new File("RunMe.jar").exists()?"-jar RunMe.jar":"-cp "+System.getProperty("java.class.path")+" org.jtrfp.trcl.flow.RunMe";
-			String cmd="java -Xmx1024M -Dorg.jtrfp.trcl.bypassConfigure=true "+executable;
+			String cmd="java -Xmx1024M -Dorg.jtrfp.trcl.bypassConfigure=true " +
+					"-XX:+UnlockExperimentalVMOptions -XX:+DoEscapeAnalysis -XX:+UseFastAccessorMethods " +
+					"-XX:+UseParNewGC -XX:+UseConcMarkSweepGC -XX:MaxGCPauseMillis=5 -XX:+AggressiveOpts " +
+					"-XX:+UseBiasedLocking -XX:+AlwaysPreTouch -XX:ParallelGCThreads=4 -Xms512m"+executable;
 			for(String arg:args){cmd+=" "+arg;}
 			try {
 				System.out.println("Restarting JVM with: \n\t"+cmd);
